[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Equip.gd" type="Script" id=1]
[ext_resource path="res://scripts/Menu/Button1.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/fonts/Planes_ValMore.ttf"

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/fonts/Planes_ValMore.ttf"

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Assets/fonts/Planes_ValMore.ttf"

[sub_resource type="DynamicFont" id=6]
size = 28
font_data = SubResource( 5 )

[node name="Control" type="Control"]
anchor_left = 0.78
anchor_right = 1.569
anchor_bottom = 0.75
margin_left = 1.28003
margin_right = -6.65613
margin_bottom = -6.10352e-05
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridH" type="HBoxContainer" parent="."]
margin_right = 800.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 6
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridV1" type="VBoxContainer" parent="GridH"]
margin_right = 262.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 6

[node name="Button1" type="Button" parent="GridH/GridV1"]
margin_right = 262.0
margin_bottom = 196.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
clip_text = true
script = ExtResource( 2 )

[node name="Label" type="Label" parent="GridH/GridV1/Button1"]
margin_left = 10.0
margin_top = 135.0
margin_right = 262.0
margin_bottom = 185.0
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="GridH/GridV1/Button1"]
margin_left = 6.8252
margin_top = 14.3576
margin_right = 258.825
margin_bottom = 64.3576
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="GridH/GridV1"]
margin_top = 202.0
margin_right = 262.0
margin_bottom = 398.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="GridH/GridV1/Button2"]
margin_left = 10.0
margin_top = 135.0
margin_right = 262.0
margin_bottom = 166.0
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label2" type="Label" parent="GridH/GridV1/Button2"]
margin_left = 6.8252
margin_top = 14.3576
margin_right = 258.825
margin_bottom = 64.3576
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Button3" type="Button" parent="GridH/GridV1"]
margin_top = 404.0
margin_right = 262.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="GridH/GridV1/Button3"]
margin_left = 10.0
margin_top = 135.0
margin_right = 262.0
margin_bottom = 166.0
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label2" type="Label" parent="GridH/GridV1/Button3"]
margin_left = 6.8252
margin_top = 14.3576
margin_right = 258.825
margin_bottom = 64.3576
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="GridV2" type="VBoxContainer" parent="GridH"]
margin_left = 268.0
margin_right = 531.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 6

[node name="Button1" type="Button" parent="GridH/GridV2"]
margin_right = 263.0
margin_bottom = 196.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="GridH/GridV2/Button1"]
margin_left = 10.0
margin_top = 135.0
margin_right = 262.0
margin_bottom = 185.0
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label2" type="Label" parent="GridH/GridV2/Button1"]
margin_left = 6.8252
margin_top = 14.3576
margin_right = 258.825
margin_bottom = 64.3576
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Button2" type="Button" parent="GridH/GridV2"]
margin_top = 202.0
margin_right = 263.0
margin_bottom = 398.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="GridH/GridV2/Button2"]
margin_left = 10.0
margin_top = 135.0
margin_right = 262.0
margin_bottom = 185.0
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label2" type="Label" parent="GridH/GridV2/Button2"]
margin_left = 6.8252
margin_top = 14.3576
margin_right = 258.825
margin_bottom = 64.3576
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Button3" type="Button" parent="GridH/GridV2"]
margin_top = 404.0
margin_right = 263.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="GridH/GridV2/Button3"]
margin_left = 10.0
margin_top = 135.0
margin_right = 262.0
margin_bottom = 185.0
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label2" type="Label" parent="GridH/GridV2/Button3"]
margin_left = 6.8252
margin_top = 14.3576
margin_right = 258.825
margin_bottom = 64.3576
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="GridV3" type="VBoxContainer" parent="GridH"]
margin_left = 537.0
margin_right = 800.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 6

[node name="Button1" type="Button" parent="GridH/GridV3"]
margin_right = 263.0
margin_bottom = 196.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="GridH/GridV3/Button1"]
margin_left = 10.0
margin_top = 135.0
margin_right = 262.0
margin_bottom = 185.0
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label2" type="Label" parent="GridH/GridV3/Button1"]
margin_left = 6.8252
margin_top = 14.3576
margin_right = 258.825
margin_bottom = 64.3576
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Button2" type="Button" parent="GridH/GridV3"]
margin_top = 202.0
margin_right = 263.0
margin_bottom = 398.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="GridH/GridV3/Button2"]
margin_left = 10.0
margin_top = 135.0
margin_right = 262.0
margin_bottom = 185.0
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label2" type="Label" parent="GridH/GridV3/Button2"]
margin_left = 6.8252
margin_top = 14.3576
margin_right = 258.825
margin_bottom = 64.3576
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Button3" type="Button" parent="GridH/GridV3"]
margin_top = 404.0
margin_right = 263.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Exit"
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 241.285
margin_top = -42.8598
margin_right = 557.285
margin_bottom = -14.8598
custom_fonts/font = SubResource( 6 )
text = "Click to equip the item"
